--- a/css/main.css
+++ b/css/main.css
@@ -97,24 +97,25 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #222;
   height: 100%;
+  width:100%
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-weight:700;
   padding: 2em;
-  font-size: 1.25em;
   height: 100%;
+  color: #fff;
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+  align-items: center;
+  flex-flow:row wrap;
   display:flex ;
   justify-content:space-between;
-
-
 }
 
 .div-1, .div-2, .div-3 {
@@ -122,13 +123,15 @@ body {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
-  width:30%;
+  height: auto;
   display:flex;
   justify-content:center;
   align-items:center;
 }
+.wrapper span {
+    font-family: 'Lora', sans-serif;
+    font-size: 1.3em;
+  }
 
 
 
@@ -213,6 +216,16 @@ body {
    Modify as content requires.
    ========================================================================== */
 
+   @media all and (min-width: 1200px) {
+    .div-1, .div-2, .div-3 {
+      flex-basis: 30%;
+    }
+
+    .div-1, .div-2 {
+      border-right: 1px solid #555;
+      padding-right: 30px;
+    }
+}
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
