--- a/css/main.css
+++ b/css/main.css
@@ -104,35 +104,56 @@ html {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight:700;
-  padding: 2em;
-  height: 100%;
+  font-size: 1.25em;
+  padding: 0em 2em;
+  display: flex;
   color: #fff;
+  justify-content: center;
 }
 
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  align-items: center;
-  flex-flow:row wrap;
-  display:flex ;
-  justify-content:space-between;
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  max-width: 1200px;  
 }
-
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  height: auto;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-.wrapper span {
+p span {
     font-family: 'Lora', sans-serif;
-    font-size: 1.3em;
   }
-
+header,
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+header h1 {
+    font-family: 'Lora', sans-serif;
+    font-size: 3em;
+  }
+main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #fff;
+  }
+  main p {
+    font-size: 1.35em;
+}
+  .flex-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5em;
+    font-size: 1em;
+    border-bottom: 1px solid #555;
+  }
+  footer {
+    border-top: 1px solid #fff;
+  }
+  
+  footer i {
+    padding: 30px 20px 0 0;
+  }
 
 
 
@@ -216,16 +237,24 @@ body {
    Modify as content requires.
    ========================================================================== */
 
-   @media all and (min-width: 1200px) {
-    .div-1, .div-2, .div-3 {
-      flex-basis: 30%;
+@media all and (min-width: 768x) {
+    body{
+        padding:1em;
+        }
     }
+@media (min-width: 1200px) {
+        .flex-items {
+          flex-basis: 30%;
+          border-bottom: none;
+        }
+    
+        #div-2 p {
+          border-left: 1px solid #555;
+          border-right: 1px solid #555;
+          padding: 0 40px;
+        }
+    }    
 
-    .div-1, .div-2 {
-      border-right: 1px solid #555;
-      padding-right: 30px;
-    }
-}
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
